--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -7,13 +7,15 @@
 
         <form method="POST">
             <input name="item_text" id="id_new_item" placeholder="Enter a to-do item">
-            {% csrf_token %}
+            {% csrf_token %} <!This is needed for security concerns otherwise post can't be made>
         </form>
 
         <table id="id_list_table">
-            <tr>
-                <td>1. {{ new_item_text }}</td>
-            </tr>
+            {% for item in items %}
+                <tr>
+                    <td>{{ forloop.counter }}. {{ item.text }}</td>
+                </tr>
+            {% endfor %}
         </table>
     </body>
 </html>
