--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -5,7 +5,7 @@
     <body>
         <h1>Start a new To-Do list</h1>
 
-        <form method="POST" action="/">
+        <form method="POST" action="/lists/new">
             <input name="item_text" id="id_new_item" placeholder="Enter a to-do item">
             {% csrf_token %} <!This is needed for security concerns otherwise post can't be made>
         </form>
