--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -23,6 +23,11 @@
                                 class="form-control input-lg"
                                 placeholder="Enter a to-do item" />
                             {% csrf_token %} <!This is needed for security concerns otherwise post can't be made>
+                            {% if error %}
+                                <div class="form-group has-error">
+                                    <span class="help-block">{{ error }}</span>
+                                </div>
+                            {% endif %}
                         </form>
                     </div>
                 </div>
