--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -19,9 +19,7 @@
                         <h1>{% block header_text %}{% endblock %}</h1>
 
                         <form method="POST" action="{% block form_action %}{% endblock %}">
-                            <input name="item_text" id="id_new_item"
-                                class="form-control input-lg"
-                                placeholder="Enter a to-do item" />
+                            {{ form.text }}
                             {% csrf_token %} <!This is needed for security concerns otherwise post can't be made>
                             {% if error %}
                                 <div class="form-group has-error">
