--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -16,6 +16,9 @@
                 <div class="container-fluid">
                     <a class="navbar-brand" href="/">Superlists</a>
                     {% if user.email %}
+                        <ul class="nav navbar-nav navbar-left">
+                            <li><a href="{% url 'my_lists' user.email %}">My lists</a></li>
+                        </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li class="navbar-text">Logged in as {{ user.email }}</li>
                             <li><a href="{% url 'logout' %}">Log out</a></li>
@@ -51,16 +54,19 @@
                     <div class="text-center">
 
                         <h1>{% block header_text %}{% endblock %}</h1>
+                        
+                        {% block list_form %}
+                            <form method="POST" action="{% block form_action %}{% endblock %}">
+                                {{ form.text }}
+                                {% csrf_token %} <!This is needed for security concerns otherwise post can't be made>
+                                {% if form.errors %}
+                                    <div class="form-group has-error">
+                                        <div class="help-block">{{ form.text.errors }}</div>
+                                    </div>
+                                {% endif %}
+                            </form>
+                        {% endblock %}
 
-                        <form method="POST" action="{% block form_action %}{% endblock %}">
-                            {{ form.text }}
-                            {% csrf_token %} <!This is needed for security concerns otherwise post can't be made>
-                            {% if form.errors %}
-                                <div class="form-group has-error">
-                                    <div class="help-block">{{ form.text.errors }}</div>
-                                </div>
-                            {% endif %}
-                        </form>
                     </div>
                 </div>
             </div>
@@ -68,6 +74,13 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
                     {% block table %}
+                    {% endblock %}
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    {% block extra_content %}
                     {% endblock %}
                 </div>
             </div>
